# Galaxy

./: CMakeLists.txt  README.md
include/: mesh.h  model.h
res/shader/: fragmentShader.glsl  instanceFragmentShader.glsl  instanceVertexShader.glsl  vertexShader.glsl
src/: main.cpp  mesh.cpp  model.cpp
